apps/dozzle/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: dozzle
  namespace: dozzle
  labels:
    app.kubernetes.io/name: dozzle
    app.kubernetes.io/instance: dozzle
spec:
  type: ClusterIP
  ports:
    - port: 8080
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app.kubernetes.io/name: dozzle
    app.kubernetes.io/instance: dozzle
